Update azure-pipelines.yml for Azure Pipelines
Adding

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,6 +29,15 @@ stages:
             inputs:
               mavenPomFile: 'pom.xml'
               goals: 'clean package'
+          - task: CopyFiles@2
+            inputs:
+              Contents: 'target/**'
+              TargetFolder: '$(Build.ArtifactStagingDirectory)/target'
+          - task: PublishBuildArtifacts@1
+            inputs:
+              PathtoPublish: '$(Build.ArtifactStagingDirectory)/target'
+              ArtifactName: 'target'
+              
           - task: Docker@2
             inputs:
               containerRegistry: 'DockerLink'
