Update azure-pipelines.yml for Azure Pipelines
adding the docker steps

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,12 +53,31 @@ stages:
         displayName: 'Install Docker Engine'
         steps:
          - script: |
+            
             sudo apt-get update
+      
+            # Install packages to allow apt to use a repository over HTTPS
             sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common
+      
+            # Add Docker’s official GPG key
             curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+      
+             # Add the Docker APT repository
             sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+      
+            # Update the apt package index again
             sudo apt-get update
-            sudo apt-get install -y docker-ce=$(DOCKER_VERSION)
+      
+            # Install Docker
+            sudo apt-get install -y docker-ce
+      
+            # Start Docker service
+            sudo systemctl start docker
+      
+            # Enable Docker service to start on boot
+            sudo systemctl enable docker
+      
+           
            displayName: 'Install Docker Engine'
 
    - stage: Deploy
